--- a/transit_sim.ipynb
+++ b/transit_sim.ipynb
@@ -25,9 +25,9 @@
     "!mkdir outputs/train_outputs\n",
     "!mkdir outputs/traveler_outputs\n",
     "\n",
-    "!wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/example/example_gtfs_bart/stop_times.txt\" -O example_gtfs_bart/stop_times.txt\n",
-    "!wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/example/example_gtfs_bart/stops.txt\" -O example_gtfs_bart/stops.txt\n",
-    "!wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/example/example_gtfs_bart/trips.txt\" -O example_gtfs_bart/trips.txt\n",
+    "!wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/example_gtfs_bart/stop_times.txt\" -O example_gtfs_bart/stop_times.txt\n",
+    "!wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/example_gtfs_bart/stops.txt\" -O example_gtfs_bart/stops.txt\n",
+    "!wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/example_gtfs_bart/trips.txt\" -O example_gtfs_bart/trips.txt\n",
     "\n",
     "!mkdir model\n",
     "!wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/model/transit_sim_model.py\" -O model/transit_sim_model.py\n",
@@ -696,7 +696,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -710,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
