update README for root folder

--- a/transit_sim.ipynb
+++ b/transit_sim.ipynb
@@ -2,6 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5f2d10f7-012a-4ddf-91fc-2b36b5a9bf0b",
+   "metadata": {},
+   "source": [
+    "### Step 0. Run this if using Google Colab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3f13f37-4798-40af-99f4-970bd9e9ac1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !rm -rf *\n",
+    "# !mkdir outputs\n",
+    "# !mkdir outputs/train_outputs\n",
+    "# !mkdir outputs/traveler_outputs\n",
+    "\n",
+    "# !wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/example/example_gtfs_bart/stop_times.txt\" -O example_gtfs_bart/stop_times.txt\n",
+    "# !wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/example/example_gtfs_bart/stops.txt\" -O example_gtfs_bart/stops.txt\n",
+    "# !wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/example/example_gtfs_bart/trips.txt\" -O example_gtfs_bart/trips.txt\n",
+    "\n",
+    "# !mkdir model\n",
+    "# !wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/main/model/transit_sim_model.py\" -O model/transit_sim_model.py\n",
+    "\n",
+    "# !mkdir sp\n",
+    "# !wget \"https://github.com/UCB-CE170a/Fall2021/raw/master/traffic_data/liblsp.so\" -O sp/liblsp.so\n",
+    "# !wget \"https://raw.githubusercontent.com/UCB-CE170a/Fall2021/master/traffic_data/interface.py\" -O sp/interface.py\n",
+    "\n",
+    "# !pip install geopandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "mMR4650MlZ3e",
    "metadata": {
     "id": "mMR4650MlZ3e"
