--- a/working_example_beijing_subway/transit_sim_beijing_line6.ipynb
+++ b/working_example_beijing_subway/transit_sim_beijing_line6.ipynb
@@ -7,22 +7,57 @@
     "id": "LT0_GCN8lWCA"
    },
    "source": [
-    "### Step 0. Make output directory"
+    "### Step 0 (A). Run this cell if running locally."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "p45HpPq0lYNw",
    "metadata": {
     "id": "p45HpPq0lYNw"
    },
    "outputs": [],
    "source": [
-    "!rm -rf outputs\n",
-    "!mkdir outputs\n",
-    "!mkdir outputs/train_outputs\n",
-    "!mkdir outputs/traveler_outputs"
+    "# !rm -rf outputs\n",
+    "# !mkdir outputs\n",
+    "# !mkdir outputs/train_outputs\n",
+    "# !mkdir outputs/traveler_outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e5dd78e-56a7-4222-91e5-fb393700f58a",
+   "metadata": {},
+   "source": [
+    "### Step 0 (B). Run this cell if using Google Colab."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2e7d4def-2d8f-42dd-98ee-fb92bfb80418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !rm -rf *\n",
+    "# !mkdir outputs\n",
+    "# !mkdir outputs/train_outputs\n",
+    "# !mkdir outputs/traveler_outputs\n",
+    "\n",
+    "# !wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/TRB/working_example_beijing_subway/inputs/gtfs_line6_stop_times.csv\" -O inputs/gtfs_line6_stop_times.csv\n",
+    "# !wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/TRB/working_example_beijing_subway/inputs/gtfs_line6_stops.csv\" -O inputs/gtfs_line6_stops.csv\n",
+    "# !wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/TRB/working_example_beijing_subway/inputs/gtfs_line6_trips.csv\" -O inputs/gtfs_line6_trips.csv\n",
+    "# !wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/TRB/working_example_beijing_subway/inputs/beijing_line6_od.csv\" -O inputs/beijing_line6_od.csv\n",
+    "\n",
+    "# !mkdir model\n",
+    "# !wget \"https://raw.githubusercontent.com/cb-cities/transit_sim/TRB/model/transit_sim_model.py\" -O model/transit_sim_model.py\n",
+    "\n",
+    "# !mkdir sp\n",
+    "# !wget \"https://github.com/UCB-CE170a/Fall2021/raw/master/traffic_data/liblsp.so\" -O sp/liblsp.so\n",
+    "# !wget \"https://raw.githubusercontent.com/UCB-CE170a/Fall2021/master/traffic_data/interface.py\" -O sp/interface.py\n",
+    "\n",
+    "# !pip install geopandas"
    ]
   },
   {
