--- a/working_example_beijing_subway/transit_viz_beijing_line6.ipynb
+++ b/working_example_beijing_subway/transit_viz_beijing_line6.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8f9f13c1-7d0d-4f39-8361-059fee5f9d70",
+   "metadata": {},
+   "source": [
+    "### Upload the following folders from the simulator workbook if running on Google Colab\n",
+    "```\n",
+    "+--- inputs: \n",
+    "|    +--- gtfs_line6_stops.csv\n",
+    "|    +--- gtfs_line6_stop_times.csv\n",
+    "|    +--- gtfs_line6_trips.csv\n",
+    "|    +--- beijing_line6_od.csv\n",
+    "+--- outputs: \n",
+    "|    +--- train_outputs/*\n",
+    "|    +--- traveler_outputs/*\n",
+    "|    +--- beijing_line6_nodes.csv\n",
+    "|    +--- beijing_line6_links.csv\n",
+    "|    +--- beijing_line6_schedule.csv\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "lipALodxrMx9",
    "metadata": {
     "id": "lipALodxrMx9"
