--- a/working_example_beijing_subway/transit_sim_beijing_line6.ipynb
+++ b/working_example_beijing_subway/transit_sim_beijing_line6.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "p45HpPq0lYNw",
    "metadata": {
     "id": "p45HpPq0lYNw"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "2e7d4def-2d8f-42dd-98ee-fb92bfb80418",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "64c95e77",
    "metadata": {
     "id": "64c95e77"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e5586cb7",
    "metadata": {
     "id": "e5586cb7"
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c509a998",
    "metadata": {
     "colab": {
@@ -159,118 +159,7 @@
     "outputId": "c7cd8412-0649-4577-96f2-75c237f12ec4",
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>route_stop_id</th>\n",
-       "      <th>stop_lon</th>\n",
-       "      <th>stop_lat</th>\n",
-       "      <th>stop_id</th>\n",
-       "      <th>type</th>\n",
-       "      <th>node_id</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>downward-caofang</td>\n",
-       "      <td>3289.08143</td>\n",
-       "      <td>-1651.531166</td>\n",
-       "      <td>caofang</td>\n",
-       "      <td>platform</td>\n",
-       "      <td>0</td>\n",
-       "      <td>POINT (3289.081 -1651.531)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      route_stop_id    stop_lon     stop_lat  stop_id      type  node_id  \\\n",
-       "0  downward-caofang  3289.08143 -1651.531166  caofang  platform        0   \n",
-       "\n",
-       "                     geometry  \n",
-       "0  POINT (3289.081 -1651.531)  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>route_stop_id</th>\n",
-       "      <th>next_route_stop_id</th>\n",
-       "      <th>start_nid</th>\n",
-       "      <th>end_nid</th>\n",
-       "      <th>initial_weight</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2941</th>\n",
-       "      <td>downward-caofang</td>\n",
-       "      <td>downward-changying</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>LINESTRING (3289.081 -1651.531, 3212.888 -1652...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         route_stop_id  next_route_stop_id  start_nid  end_nid  \\\n",
-       "2941  downward-caofang  downward-changying          0        1   \n",
-       "\n",
-       "      initial_weight                                           geometry  \n",
-       "2941             1.0  LINESTRING (3289.081 -1651.531, 3212.888 -1652...  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### display and export schedule\n",
     "all_trains.schedule_df.to_csv('{}/{}_schedule.csv'.format(out_path, scen_nm), index=False)\n",
@@ -297,21 +186,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a1cbe520",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "def generate_random_demand(scen_nm, network):\n",
+    "    travelers = Travelers()\n",
+    "    travelers.random_od(all_nodes=network.all_nodes, num_travelers=10000)\n",
+    "    node_to_station_dict = {getattr(row, 'node_id'): getattr(row, 'stop_id') for row in network.all_nodes.itertuples()} \n",
+    "    travelers.travelers_df['enter_station'] = travelers.travelers_df['origin_nid'].map(node_to_station_dict)\n",
+    "    travelers.travelers_df['exit_station'] = travelers.travelers_df['destin_nid'].map(node_to_station_dict)\n",
+    "    travelers.travelers_df.to_csv('{}/{}_od.csv'.format(in_path, scen_nm), index=False)\n",
+    "\n",
     "def set_demand(scen_nm, network):\n",
     "    travelers_df = pd.read_csv('{}/{}_od.csv'.format(in_path, scen_nm))\n",
     "\n",
-    "    station_to_node_dict = {getattr(row, 'stop_id'): getattr(row, 'node_id') for row in network.all_nodes.itertuples()}\n",
-    "    travelers_df['origin_nid'] = travelers_df['enter_station'].map(station_to_node_dict)#.astype(int)\n",
-    "    travelers_df['destin_nid'] = travelers_df['exit_station'].map(station_to_node_dict)#.astype(int)\n",
-    "    travelers_df['traveler_id'] = np.arange(travelers_df.shape[0])\n",
-    "    travelers_df = travelers_df[travelers_df['origin_nid'] != travelers_df['destin_nid']]\n",
+    "    # station_to_node_dict = {getattr(row, 'stop_id'): getattr(row, 'node_id') for row in network.all_nodes.itertuples()}\n",
+    "    # travelers_df['origin_nid'] = travelers_df['enter_station'].map(station_to_node_dict)#.astype(int)\n",
+    "    # travelers_df['destin_nid'] = travelers_df['exit_station'].map(station_to_node_dict)#.astype(int)\n",
+    "    # travelers_df['traveler_id'] = np.arange(travelers_df.shape[0])\n",
+    "    # travelers_df = travelers_df[travelers_df['origin_nid'] != travelers_df['destin_nid']]\n",
     "\n",
     "    travelers = Travelers()\n",
     "    travelers.travelers_df = travelers_df[['traveler_id', 'origin_nid', 'destin_nid', 'departure_time']].copy()#.iloc[1871:1875]\n",
@@ -336,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "94b25005",
    "metadata": {
     "id": "94b25005"
@@ -372,7 +269,7 @@
     "                  ):\n",
     "    \n",
     "    t_init, t_end = 3600*5, 3600*12\n",
-    "    trace_ods = [90192, 90526, 91550, 87102, 73120, 57417]\n",
+    "    trace_ods = [100, 200, 300, 400, 500]\n",
     "    trace_list = []\n",
     "    scen_spec = 'cap{}-{}_tt{}-{}'.format(train_capacity_pp, train_capacity_sp, \n",
     "                                          transfer_time_pp, transfer_time_sp)\n",
@@ -424,273 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "66f33d55-8e31-4874-aad1-bc9dc8fd3058",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(150725, 10)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>traveler_id</th>\n",
-       "      <th>origin_nid</th>\n",
-       "      <th>destin_nid</th>\n",
-       "      <th>departure_time</th>\n",
-       "      <th>traveler_status</th>\n",
-       "      <th>update_time</th>\n",
-       "      <th>association</th>\n",
-       "      <th>next_station_id</th>\n",
-       "      <th>init_boarding_time</th>\n",
-       "      <th>final_alighting_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>150720</th>\n",
-       "      <td>150720</td>\n",
-       "      <td>41</td>\n",
-       "      <td>36</td>\n",
-       "      <td>26731</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-11</td>\n",
-       "      <td>-111</td>\n",
-       "      <td>10000000.0</td>\n",
-       "      <td>10000000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150721</th>\n",
-       "      <td>150721</td>\n",
-       "      <td>38</td>\n",
-       "      <td>36</td>\n",
-       "      <td>33945</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-11</td>\n",
-       "      <td>-111</td>\n",
-       "      <td>10000000.0</td>\n",
-       "      <td>10000000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150722</th>\n",
-       "      <td>150722</td>\n",
-       "      <td>30</td>\n",
-       "      <td>36</td>\n",
-       "      <td>34517</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-11</td>\n",
-       "      <td>-111</td>\n",
-       "      <td>10000000.0</td>\n",
-       "      <td>10000000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150723</th>\n",
-       "      <td>150723</td>\n",
-       "      <td>41</td>\n",
-       "      <td>36</td>\n",
-       "      <td>29090</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-11</td>\n",
-       "      <td>-111</td>\n",
-       "      <td>10000000.0</td>\n",
-       "      <td>10000000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150724</th>\n",
-       "      <td>150724</td>\n",
-       "      <td>40</td>\n",
-       "      <td>36</td>\n",
-       "      <td>33440</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-11</td>\n",
-       "      <td>-111</td>\n",
-       "      <td>10000000.0</td>\n",
-       "      <td>10000000.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        traveler_id  origin_nid  destin_nid  departure_time  traveler_status  \\\n",
-       "150720       150720          41          36           26731                0   \n",
-       "150721       150721          38          36           33945                0   \n",
-       "150722       150722          30          36           34517                0   \n",
-       "150723       150723          41          36           29090                0   \n",
-       "150724       150724          40          36           33440                0   \n",
-       "\n",
-       "        update_time  association  next_station_id  init_boarding_time  \\\n",
-       "150720            0          -11             -111          10000000.0   \n",
-       "150721            0          -11             -111          10000000.0   \n",
-       "150722            0          -11             -111          10000000.0   \n",
-       "150723            0          -11             -111          10000000.0   \n",
-       "150724            0          -11             -111          10000000.0   \n",
-       "\n",
-       "        final_alighting_time  \n",
-       "150720            10000000.0  \n",
-       "150721            10000000.0  \n",
-       "150722            10000000.0  \n",
-       "150723            10000000.0  \n",
-       "150724            10000000.0  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation at 5:00am, 18000\n",
-      "Simulation at 5:05am, 18300\n",
-      "Simulation at 5:10am, 18600\n",
-      "Simulation at 5:15am, 18900\n",
-      "Simulation at 5:20am, 19200\n",
-      "Simulation at 5:25am, 19500\n",
-      "Simulation at 5:30am, 19800\n",
-      "Simulation at 5:35am, 20100\n",
-      "Simulation at 5:40am, 20400\n",
-      "Simulation at 5:45am, 20700\n",
-      "Simulation at 5:50am, 21000\n",
-      "Simulation at 5:55am, 21300\n",
-      "Simulation at 6:00am, 21600\n",
-      "Simulation at 6:05am, 21900\n",
-      "Simulation at 6:10am, 22200\n",
-      "Simulation at 6:15am, 22500\n",
-      "Simulation at 6:20am, 22800\n",
-      "Simulation at 6:25am, 23100\n",
-      "Simulation at 6:30am, 23400\n",
-      "Simulation at 6:35am, 23700\n",
-      "Simulation at 6:40am, 24000\n",
-      "Simulation at 6:45am, 24300\n",
-      "Simulation at 6:50am, 24600\n",
-      "Simulation at 6:55am, 24900\n",
-      "Simulation at 7:00am, 25200\n",
-      "Simulation at 7:05am, 25500\n",
-      "Simulation at 7:10am, 25800\n",
-      "Simulation at 7:15am, 26100\n",
-      "Simulation at 7:20am, 26400\n",
-      "Simulation at 7:25am, 26700\n",
-      "Simulation at 7:30am, 27000\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "Simulation at 7:35am, 27300\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "Simulation at 7:40am, 27600\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "(0, 15)\n",
-      "Simulation at 7:45am, 27900\n",
-      "Simulation at 7:50am, 28200\n",
-      "Simulation at 7:55am, 28500\n",
-      "Simulation at 8:00am, 28800\n",
-      "Simulation at 8:05am, 29100\n",
-      "Simulation at 8:10am, 29400\n",
-      "Simulation at 8:15am, 29700\n",
-      "Simulation at 8:20am, 30000\n",
-      "Simulation at 8:25am, 30300\n",
-      "Simulation at 8:30am, 30600\n",
-      "Simulation at 8:35am, 30900\n",
-      "Simulation at 8:40am, 31200\n",
-      "Simulation at 8:45am, 31500\n",
-      "Simulation at 8:50am, 31800\n",
-      "Simulation at 8:55am, 32100\n",
-      "Simulation at 9:00am, 32400\n",
-      "Simulation at 9:05am, 32700\n",
-      "Simulation at 9:10am, 33000\n",
-      "Simulation at 9:15am, 33300\n",
-      "Simulation at 9:20am, 33600\n",
-      "Simulation at 9:25am, 33900\n",
-      "Simulation at 9:30am, 34200\n",
-      "Simulation at 9:35am, 34500\n",
-      "Simulation at 9:40am, 34800\n",
-      "Simulation at 9:45am, 35100\n",
-      "Simulation at 9:50am, 35400\n",
-      "Simulation at 9:55am, 35700\n",
-      "Simulation at 10:00am, 36000\n",
-      "Simulation at 10:05am, 36300\n",
-      "Simulation at 10:10am, 36600\n",
-      "Simulation at 10:15am, 36900\n",
-      "Simulation at 10:20am, 37200\n",
-      "Simulation at 10:25am, 37500\n",
-      "Simulation at 10:30am, 37800\n",
-      "Simulation at 10:35am, 38100\n",
-      "Simulation at 10:40am, 38400\n",
-      "Simulation at 10:45am, 38700\n",
-      "Simulation at 10:50am, 39000\n",
-      "Simulation at 10:55am, 39300\n",
-      "Simulation at 11:00am, 39600\n",
-      "Simulation at 11:05am, 39900\n",
-      "Simulation at 11:10am, 40200\n",
-      "Simulation at 11:15am, 40500\n",
-      "Simulation at 11:20am, 40800\n",
-      "Simulation at 11:25am, 41100\n",
-      "Simulation at 11:30am, 41400\n",
-      "Simulation at 11:35am, 41700\n",
-      "Simulation at 11:40am, 42000\n",
-      "Simulation at 11:45am, 42300\n",
-      "Simulation at 11:50am, 42600\n",
-      "Simulation at 11:55am, 42900\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### reset all traveler status to pre-departure\n",
+    "generate_random_demand(scen_nm, network)\n",
     "travelers = set_demand(scen_nm, network)\n",
     "\n",
     "### run simulation and save outputs\n",
